# airflow-mastery

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  justfile  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml
CONTRIBUTING/: index.html
airflow3-k8s-guide/: index.html
case-studies/: index.html
case-studies/airbnb-experimentation/: index.html
case-studies/modern-rag-architecture/: index.html
case-studies/spotify-recommendations/: index.html
case-studies/stripe-fraud-detection/: index.html
dags/examples/: 01_hello_airflow.py  02_taskflow_etl.py  03_operators_showcase.py  04_scheduling_patterns.py  05_asset_pipeline.py  06_dynamic_task_mapping.py  07_sensor_patterns.py  08_deferrable_sensor.py  09_task_groups.py  10_branching_logic.py  11_error_handling.py  12_resource_pools.py  13_rest_api_integration.py
docs/: airflow3-k8s-guide.md  index.md  references.md
docs/case-studies/: README.md  airbnb-experimentation.md  modern-rag-architecture.md  spotify-recommendations.md  stripe-fraud-detection.md
docs/getting-started/: manual-setup.md  quickstart.md  troubleshooting.md
docs/includes/: abbreviations.md
docs/plans/: 2026-01-04-curriculum-platform-design.md  2026-01-04-module00-environment-setup-design.md  2026-01-04-module16-capstone-design.md
docs/stylesheets/: extra.css
getting-started/manual-setup/: index.html
getting-started/quickstart/: index.html
getting-started/troubleshooting/: index.html
includes/abbreviations/: index.html
infrastructure/: README.md
infrastructure/docker-compose/: .env.example  docker-compose.yml
infrastructure/helm/: values-production.yaml  values.yaml
infrastructure/kubernetes/: local-setup.md
infrastructure/kubernetes/network-policies/: airflow-network-policy.yaml
infrastructure/kubernetes/pod-templates/: default-pod.yaml  high-memory-pod.yaml
infrastructure/kubernetes/security/: pod-security-standards.md
infrastructure/scripts/: deploy.sh
modules/: README.md  index.html
modules/00-environment-setup/: README.md  index.html
modules/00-environment-setup/exercises/: exercise_0_1.md  exercise_0_2.md  exercise_0_3.md  exercise_0_4.md  exercise_0_5.md
modules/00-environment-setup/solutions/: solution_0_1_pyproject.toml  solution_0_2_pyproject.toml  solution_0_3_pre-commit-config.yaml  solution_0_3_ruff.toml  solution_0_4_Dockerfile  solution_0_4_docker-compose.yaml  solution_0_5_conftest.py  solution_0_5_test_dags.py
modules/01-foundations/: README.md  index.html
modules/02-taskflow-api/: README.md  index.html
modules/03-operators-hooks/: README.md  index.html
modules/04-scheduling-triggers/: README.md  index.html
modules/05-assets-data-aware/: README.md  index.html
modules/06-dynamic-tasks/: README.md  index.html
modules/07-testing-debugging/: README.md  index.html
modules/08-kubernetes-executor/: README.md  index.html
modules/09-production-patterns/: README.md  index.html
modules/10-advanced-topics/: README.md  index.html
modules/11-sensors-deferrable/: README.md  index.html
modules/12-rest-api/: README.md  index.html
modules/13-connections-secrets/: README.md  index.html
modules/14-resource-management/: README.md  index.html
modules/15-ai-ml-orchestration/: README.md  index.html
modules/16-capstone/: README.md
plans/2026-01-04-curriculum-platform-design/: index.html
plans/2026-01-04-module00-environment-setup-design/: index.html
references/: index.html
scripts/: quickstart.ps1  quickstart.sh
search/: search_index.json
tests/: conftest.py  test_dag_integrity.py  test_integration.py  test_module_exercises.py  test_solutions.py  test_taskflow_patterns.py
(+213 files in other folders)
